unpackaged/main/default/objects/Verto_Fund__c/Verto_Fund__c.object-meta.xml
<CustomObject>
    <label>Verto Fund</label>
    <nameField>
        <label>Verto Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verto Fund</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>