unpackaged/main/default/objects/Verto_Fund__c/fields/Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>Sales_Document__c</fullName>
    <label>Sales Document</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Verto Fund</relationshipLabel>
    <relationshipName>Verto_Fund</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>