unpackaged/main/default/objects/Verto_Fund__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied to Student Invoice</fullName>
                <default>true</default>
                <label>Applied to Student Invoice</label>
            </value>
            <value>
                <fullName>Billed Verto Fund</fullName>
            </value>
            <value>
                <fullName>Received Amount from Verto Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>