unpackaged/main/default/objects/Verto_Fund__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Verto Fund</relationshipLabel>
    <relationshipName>Verto_Fund</relationshipName>
    <type>Lookup</type>
</CustomField>