unpackaged/main/default/objects/Verto_Fund__c/fields/UNH_PowerFAIDS_Codes__c.field-meta.xml
<CustomField>
    <fullName>UNH_PowerFAIDS_Codes__c</fullName>
    <formula>&#39;VeVertFund&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNH PowerFAIDS Codes</label>
    <type>Text</type>
</CustomField>